Item1568: Remove text that comforts users into thinking clicking button is always followed by OK situation. Brief and accurate is better.
git-svn-id: http://svn.foswiki.org/branches/Release01x00@4196 0b4bb1d4-4e5a-0410-9cc4-b2b747904278

--- a/core/locale/zh-cn.po
+++ b/core/locale/zh-cn.po
@@ -174,8 +174,7 @@ msgstr ""
 
 #: core/templates/validate.tmpl:14
 msgid ""
-"Press OK to confirm that this change was intentional - e.g you had "
-"clicked a button on a %1 page just before this message came up."
+"Press OK to confirm that this change was intentional."
 msgstr ""
 
 #: core/templates/validate.tmpl:14
